Minor bug fixes, updated color of numbers, background and transformation pictures

--- a/css/style.css
+++ b/css/style.css
@@ -76,25 +76,25 @@ h1,.name{
     animation-name: slidein;
     font-size: 50px;
     text-shadow: 5px 5px 0 #714D30;
-    /* background-color: white; */
+    font-family: papyrus, fantasy;
 }
 
 .hunger{
-  color: black;
+  color: red;
   font-size: 30px;
 }
 
 .sleepiness{
-  color: black;
+  color: red;
   font-size: 30px;
 }
 
 .boredom{
-  color: black;
+  color: red;
   font-size: 30px;
 }
 .age{
-  color: black;
+  color: green;
   font-size: 30px;
 }
 
@@ -120,7 +120,6 @@ html{
 
 .buttonBegin{
   font-size: 30px;
-  background-color: #714D30
 }
 
 .feedButton{
